Updated scientific software

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="keywords" content="Open Source, GNU, GPL, Free Software, Windows, Microsoft" />
 <meta name="description" content="Open Source Software for Windows" />
-<meta name="author" content="Bart Vandewoestyne" />
+<meta name="author" content="user1" />
 
 <link rel="stylesheet" type="text/css" href="osswinstyle.css" />
 
@@ -1404,6 +1404,10 @@ Mathematics:
   <li><a href="http://salstat.sourceforge.net/">SalStat</a> [GNU GPL]</li>
   <li><a href="http://www.stat.umn.edu/macanova/">MacAnova</a> [GNU GPL]</li>
   <li><a href="http://www.csc.fi/elmer/">Elmer</a> [GNU GPL]</li>
+  <li><a href="https://cermics.enpc.fr/~jpc/nsp-tiddly/">NSP</a> [GNU GPL]</li>
+  <li><a href="http://www.scicoslab.org//">SCICOSLAB</a> [SCILAB licence]</li>
+  <li><a href="https://github.com/Nelson-numerical-software/nelson">NELSON</a> [???]</li>
+  <li><a href="https://sourceforge.net/projects/pspp4windows/">PSPP4WINDOWS</a> [GNU GPL]</li>    
 </ul>
 
 <div>
